--- a/starbuzz/index.html
+++ b/starbuzz/index.html
@@ -8,7 +8,19 @@
 
   <body>
     <div id="header">
-      <img src="images/header.gif" alt="Starbuzz Coffee header image">
+      <div class="headerleft"></div>
+      <div class="headerright"></div>
+
+      <div id ="award">
+       <img src="images/award.gif">
+        alt="Roaster of the Year award">
+      </div>
+
+      <div id="coupon">
+        <a href="freecoffe.html" title="Click here to get your free coffee">
+          <img src="images/ticket.gif" alt="Sterbuzz coupon ticket"
+        </a>
+      </div>
     </div>
     
     
